force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/ucinn_ascendv2__Address_Relation__c.object-meta.xml
<CustomObject>
    <description>Junction object to associate addresses with constituent or organization.</description>
    <label>Address Relation</label>
    <nameField>
        <label>Address Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>