force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/Address_Country_Formula__c.field-meta.xml
<CustomField>
    <fullName>Address_Country_Formula__c</fullName>
    <formula>ucinn_ascendv2__Address__r.ucinn_ascendv2__Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Country</label>
    <type>Text</type>
</CustomField>