force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/Address_Description__c.field-meta.xml
<CustomField>
    <fullName>Address_Description__c</fullName>
    <label>Address Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Lost Address</fullName>
            </value>
            <value>
                <fullName>Parent Address</fullName>
            </value>
            <value>
                <fullName>Not found-Indv Address Search</fullName>
            </value>
            <value>
                <fullName>Removed Address</fullName>
            </value>
            <value>
                <fullName>Confirmed by Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>