force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/Address_Duplicate_Hash_Formula__c.field-meta.xml
<CustomField>
    <fullName>Address_Duplicate_Hash_Formula__c</fullName>
    <formula>ucinn_ascendv2__Address__r.Address_Duplicate_Hash__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Duplicate Hash Formula</label>
    <type>Text</type>
</CustomField>