force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/Address_Lat__c.field-meta.xml
<CustomField>
    <fullName>Address_Lat__c</fullName>
    <description>Latitude from the linked address record</description>
    <formula>ucinn_ascendv2__Address__r.ucinn_ascendv2__Location__Latitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Latitude from the linked address record</inlineHelpText>
    <label>Address Lat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>