force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/Address_Long__c.field-meta.xml
<CustomField>
    <fullName>Address_Long__c</fullName>
    <description>Longitude from the linked address record</description>
    <formula>ucinn_ascendv2__Address__r.ucinn_ascendv2__Location__Longitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Longitude from the linked address record</inlineHelpText>
    <label>Address Long</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>