force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/Address_Relation_Confirmed_by_Individual__c.field-meta.xml
<CustomField>
    <fullName>Address_Relation_Confirmed_by_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed by Individual</label>
    <type>Checkbox</type>
</CustomField>