force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/Address_Verified_by_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Address_Verified_by_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Verified by Vendor</label>
    <type>Checkbox</type>
</CustomField>