force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>ucinn_ascendv2__Address__r.ucinn_ascendv2__County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>