force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/isuf_Portal_State__c.field-meta.xml
<CustomField>
    <fullName>isuf_Portal_State__c</fullName>
    <label>Portal State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_States</valueSetName>
    </valueSet>
</CustomField>