force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/Phone_for_Address__c.field-meta.xml
<CustomField>
    <fullName>Phone_for_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phone for Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Phone__c.ucinn_ascendv2__Contact__c</field>
            <operation>equals</operation>
            <valueField>$Source.ucinn_ascendv2__Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Phone__c</referenceTo>
    <relationshipLabel>Address Relations</relationshipLabel>
    <relationshipName>Address_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>