force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/SF_Maps_Latitude__c.field-meta.xml
<CustomField>
    <fullName>SF_Maps_Latitude__c</fullName>
    <description>Latitude geocoded by Salesforce Maps and used while mapping if &apos;Address Lat&apos; is blank</description>
    <inlineHelpText>Latitude geocoded by Salesforce Maps and used while mapping if &apos;Address Lat&apos; is blank</inlineHelpText>
    <label>SF Maps Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>