force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/SF_Maps_Longitude__c.field-meta.xml
<CustomField>
    <fullName>SF_Maps_Longitude__c</fullName>
    <description>Longitude geocoded by Salesforce Maps and used while mapping if &apos;Address Long&apos; is blank</description>
    <inlineHelpText>Longitude geocoded by Salesforce Maps and used while mapping if &apos;Address Long&apos; is blank</inlineHelpText>
    <label>SF Maps Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>