force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Type_Formula__c</fullName>
    <formula>TEXT ( ucinn_ascendv2__Type__c )</formula>
    <label>Type Formula</label>
    <type>Text</type>
</CustomField>