force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/ucinn_ascendv2__Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Address Relations</relationshipLabel>
    <relationshipName>Address_Relations_Account</relationshipName>
    <type>Lookup</type>
</CustomField>