force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/ucinn_ascendv2__Address__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Address__c</fullName>
    <label>Address</label>
    <referenceTo>ucinn_ascendv2__Address__c</referenceTo>
    <relationshipLabel>Address Relations</relationshipLabel>
    <relationshipName>Address_Relations_Address</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>