force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/ucinn_ascendv2__Address_Relation_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Address_Relation_Name_Auto_Number__c</fullName>
    <displayFormat>AR-{0000000}</displayFormat>
    <label>Address Relation Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>