force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/ucinn_ascendv2__Address_Street_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Address_Street_Formula__c</fullName>
    <formula>ucinn_ascendv2__Address__r.ucinn_ascendv2__Street_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Street</label>
    <type>Text</type>
</CustomField>