force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/ucinn_ascendv2__Full_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Full_Address_Formula__c</fullName>
    <formula>IF(
(OR(NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__Street_Formula__c)), NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__City__c)), NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__State__c)), NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__Postal_Code__c)), NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__Country__c)))),
IF(NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__Street_Formula__c)), ucinn_ascendv2__Address__r.ucinn_ascendv2__Street_Formula__c &amp; BR() , &quot;&quot;) &amp;

IF(NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__City__c)) ,
ucinn_ascendv2__Address__r.ucinn_ascendv2__City__c &amp; IF(NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__State__c)), &quot;, &quot; ,
IF(NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__Postal_Code__c)) , &quot; &quot; , BR())) ,
&quot;&quot;) &amp;

IF(NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__State__c)) , ucinn_ascendv2__Address__r.ucinn_ascendv2__State__c &amp; IF(NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__Postal_Code__c)), &quot; &quot; , BR()) , &quot;&quot;) &amp;
IF(NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__Postal_Code__c)), ucinn_ascendv2__Address__r.ucinn_ascendv2__Postal_Code__c &amp; BR() , &quot;&quot;) &amp;

IF(NOT(ISBLANK(ucinn_ascendv2__Address__r.ucinn_ascendv2__Country__c)), ucinn_ascendv2__Address__r.ucinn_ascendv2__Country__c , &quot;&quot;)
,&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>