force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/ucinn_ascendv2__In_Care_Of__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__In_Care_Of__c</fullName>
    <description>C/O in mailling address</description>
    <label>In Care Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>