force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/ucinn_ascendv2__Is_Active_Seasonal_Address__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Active_Seasonal_Address__c</fullName>
    <description>Checks if End Date Value is less than Start Date Value for ex: 12/1 (Start) &gt; 1/30 (END) = True</description>
    <formula>(Value(ucinn_ascendv2__Seasonal_Start_Year__c) &lt; Value(ucinn_ascendv2__Seasonal_End_Year__c) || (ISBLANK(ucinn_ascendv2__Seasonal_Start_Year__c) &amp;&amp; ISBLANK(ucinn_ascendv2__Seasonal_End_Year__c)))
&amp;&amp;
(
(Value(TEXT(ucinn_ascendv2__Seasonal_End_Month__c)) &lt; Value(TEXT(ucinn_ascendv2__Seasonal_Start_Month__c)))
|| ((Value(TEXT(ucinn_ascendv2__Seasonal_Start_Month__c)) = Value(TEXT(ucinn_ascendv2__Seasonal_End_Month__c)))
&amp;&amp; ( Value(TEXT(ucinn_ascendv2__Seasonal_End_Month__c)) &lt;= Value(TEXT(ucinn_ascendv2__Seasonal_Start_Month__c)) ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active Seasonal Address</label>
    <type>Checkbox</type>
</CustomField>