force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/ucinn_ascendv2__Is_Preferred__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Preferred</label>
    <type>Checkbox</type>
</CustomField>