force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/ucinn_ascendv2__Seasonal_End_Year__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Seasonal_End_Year__c</fullName>
    <inlineHelpText>The year when seasonal address ends.</inlineHelpText>
    <label>Seasonal End Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>