force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/ucinn_ascendv2__Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Address Removed</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Foreign-Verified</fullName>
                <isActive>false</isActive>
                <label>Foreign-Verified</label>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <isActive>false</isActive>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Lost Address</fullName>
                <isActive>false</isActive>
                <label>Lost Address</label>
            </value>
            <value>
                <fullName>NCOA Address</fullName>
                <isActive>false</isActive>
                <label>NCOA Address</label>
            </value>
            <value>
                <fullName>Not found-Indv Address Search</fullName>
                <isActive>false</isActive>
                <label>Not found-Indv Address Search</label>
            </value>
            <value>
                <fullName>Parent Address</fullName>
                <isActive>false</isActive>
                <label>Parent Address</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>