force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/ucinn_portal_Is_Show_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Is_Show_Postal_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Show Postal Code</label>
    <type>Checkbox</type>
</CustomField>