force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/ucinn_portal_Original_Record__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Original_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Record</label>
    <referenceTo>ucinn_ascendv2__Address_Relation__c</referenceTo>
    <relationshipLabel>Interim Address Relations</relationshipLabel>
    <relationshipName>ucinn_portal_Address_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>