force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/Update_Household_Member_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Update_Household_Member_Addresses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Household Member Addresses</label>
    <type>Checkbox</type>
</CustomField>