force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/fields/Update_Spouse_Address__c.field-meta.xml
<CustomField>
    <fullName>Update_Spouse_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Update Spouse Address</label>
    <type>Checkbox</type>
</CustomField>