force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/recordTypes/ucinn_ascendv2__Household_Address_Relation.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Household_Address_Relation</fullName>
    <active>true</active>
    <description>A relationship between a Household and an Address.</description>
    <label>Household Address Relation</label>
</RecordType>