force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/validationRules/Prevent_update_spouse_for_business_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_update_spouse_for_business_type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(ucinn_ascendv2__Type__c, &apos;Business&apos;), Update_Spouse_Address__c = True,  RecordType.Id = &apos;0122E000001AdG4QAK&apos;)</errorConditionFormula>
    <errorMessage>Business type addresses do not allow copy to spouse functionality.</errorMessage>
</ValidationRule>