force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/validationRules/ucinn_ascendv2__End_Date_Is_in_Future_for_Current_Addr.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__End_Date_Is_in_Future_for_Current_Addr</fullName>
    <active>false</active>
    <description>For any address that is current, the end date needs to be a future date.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
IF ( !ISNULL ( ucinn_ascendv2__End_Date__c ),
IF ( ISPICKVAL ( ucinn_ascendv2__Status__c, &apos;Current&apos; ),
IF ( ucinn_ascendv2__End_Date__c &lt; TODAY(), TRUE, FALSE ),
FALSE ),
FALSE )

&amp;&amp; OR(
RecordType.DeveloperName = &apos;Organization_Address_Relation&apos;,
RecordType.DeveloperName = &apos;Household_Address_Relation&apos;,
RecordType.DeveloperName = &apos;Contact_Address_Relation&apos;
) &amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorMessage>Invalid end date. Please enter a future end date for current address.</errorMessage>
</ValidationRule>