force-app/main/default/objects/ucinn_ascendv2__Address_Relation__c/validationRules/ucinn_ascendv2__End_Date_Is_Past_Date_for_Former.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__End_Date_Is_Past_Date_for_Former</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
IF ( ISPICKVAL( ucinn_ascendv2__Status__c , &apos;Former&apos;),
IF ( ucinn_ascendv2__End_Date__c &gt; TODAY(), True, False ),
False )
&amp;&amp; OR(
RecordType.DeveloperName = &apos;Organization_Address_Relation&apos;,
RecordType.DeveloperName = &apos;Household_Address_Relation&apos;,
RecordType.DeveloperName = &apos;Contact_Address_Relation&apos;
) &amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorMessage>Please specify a valid end date for former address. End date cannot be a future date for former address.</errorMessage>
</ValidationRule>